--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
-    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="nav_header_height">206dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="size_title">40dp</dimen>
+
+    <dimen name="size_login">15dp</dimen>
+    <dimen name="size_item">20dp</dimen>
 </resources>
