--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,7 @@
             android:orientation="vertical"
             android:layout_height="wrap_content" >
 
+            <!--
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="174dp"
@@ -78,7 +79,15 @@
                 android:padding="10dp"
                 android:layout_height="wrap_content"
                 android:gravity="center|center_horizontal|center_vertical"
-                android:text="@string/app_login"  />
+                android:text="@string/app_login"  /> -->
+
+            <com.google.android.material.button.MaterialButton
+                android:theme="@style/Theme.AppEntrePatas.Button"
+                android:id="@+id/btn_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_login" />
+
 
         </LinearLayout>
 
@@ -106,6 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:textSize="@dimen/size_item"
                     android:text="@string/app_signup" />
 
             </LinearLayout>
