--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:id="@+id/detail_fragment"
     tools:context=".ui.request.DetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
