--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,10 +25,9 @@
 
     <fragment
         android:id="@+id/nav_locate"
-        android:name="com.hache.appentrepatas.ui.locate.LocateFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_locate" />
-
+        tools:layout="@layout/activity_maps" />
 
     <fragment
         android:id="@+id/nav_callup"
