--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -40,11 +40,11 @@
             android:title="@string/menu_statistics" />
 
         <item
-            android:id="@+id/nav_subtitle" >
+            android:id="@+id/nav_subtitle"
+            android:title="" >
             <menu>
                 <item
                     android:id="@+id/nav_setting"
-
                     android:title="@string/menu_settings" />
 
                 <item
@@ -55,59 +55,5 @@
         </item>
 
     </group>
-
-    <!--
-    <group android:id="client"
-        android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:visible="false"
-            android:title="@string/menu_home" />
-
-        <item
-            android:id="@+id/nav_adopt"
-            android:title="@string/menu_adopt" />
-
-        <item
-            android:id="@+id/nav_request"
-            android:title="@string/menu_request" />
-
-        <item
-            android:id="@+id/nav_locate"
-            android:title="@string/menu_slideshow" />
-
-        <item
-            android:id="@+id/nav_callup"
-            android:title="@string/menu_callup" />
-
-        <item
-            android:id="@+id/nav_register"
-            android:title="@string/menu_register" />
-
-        <item
-            android:id="@+id/nav_list"
-            android:title="@string/menu_list" />
-
-        <item
-            android:id="@+id/nav_statistics"
-            android:title="@string/menu_statistics" />
-
-        <item
-            android:id="@+id/nav_subtitle" >
-            <menu>
-                <item
-                    android:id="@+id/nav_setting"
-
-                    android:title="@string/menu_settings" />
-
-                <item
-                    android:id="@+id/nav_logoff"
-                    android:title="@string/menu_logoff" />
-
-            </menu>
-        </item>
-
-    </group> -->
-
 
 </menu>
