--- a/app/src/main/res/layout/fragment_callus.xml
+++ b/app/src/main/res/layout/fragment_callus.xml
@@ -5,5 +5,24 @@
     android:layout_height="match_parent"
     tools:context=".ui.callup.CallusFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/size_title"
+            android:textStyle="bold"
+            android:text="@string/app_contact"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/size_item"
+            android:text="@string/app_telefono"/>
+    </LinearLayout>
 
 </FrameLayout>
