--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,58 +8,61 @@
     android:background="@color/white"
     tools:context=".HomeActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:layout_margin="20dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:text="EntrePatas" />
-
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_logo" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center|bottom"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:layout_margin="20dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/lbl_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/size_login"
+                android:layout_marginBottom="30dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/co_blue"
-                android:text="@string/app_btn_login" />
+                android:gravity="center"
+                android:textColor="@color/co_brown"
+                android:text="EntrePatas" />
 
-            <TextView
-                android:id="@+id/lbl_singup"
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_logo" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/size_login"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                android:text="@string/app_signup" />
+                android:gravity="center|bottom"
+                android:layout_margin="20dp"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/lbl_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/size_item"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/co_blue"
+                    android:text="@string/app_btn_login" />
+
+                <TextView
+                    android:id="@+id/lbl_singup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/size_item"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/app_signup" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
 
 </LinearLayout>
