--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,8 @@
 
     <include layout="@layout/layout_headboard" />
 
-    <LinearLayout
+
+        <LinearLayout
         android:orientation="vertical"
         android:layout_margin="20dp"
         android:layout_width="match_parent"
@@ -22,6 +23,7 @@
             android:textSize="@dimen/size_title"
             android:textStyle="bold"
             android:gravity="center"
+            android:textColor="@color/co_brown"
             android:text="@string/app_login" />
 
         <LinearLayout
@@ -59,6 +61,7 @@
 
             <EditText
                 android:layout_width="300dp"
+                android:password="true"
                 android:hint="@string/user_password"
                 android:layout_height="wrap_content" />
 
