--- a/app/src/main/res/layout/fragment_callus.xml
+++ b/app/src/main/res/layout/fragment_callus.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/size_title"
+            android:textColor="@color/co_brown"
             android:textStyle="bold"
             android:text="@string/app_contact"/>
 
