--- a/app/src/main/res/layout/item_request.xml
+++ b/app/src/main/res/layout/item_request.xml
@@ -20,21 +20,45 @@
             android:layout_weight="1"
             android:gravity="center">
 
-            <ImageView
-                android:id="@+id/im_request"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_height="200dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
                 android:layout_weight="1"
-                android:src="@drawable/ic_foto" />
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginBottom="4dp"
+                android:background="@color/co_melon"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Firulay"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/size_item"
+                    android:gravity="center"
+                    />
+
+                <ImageView
+                    android:id="@+id/im_request"
+                    android:layout_width="150dp"
+                    android:layout_marginTop="4dp"
+
+                    android:layout_marginLeft="4dp"
+                    android:layout_height="150dp"
+                    android:paddingBottom="10dp"
+                    android:adjustViewBounds="true"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_foto" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -45,6 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:minWidth="180dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -66,6 +91,7 @@
                         <TextView
                             android:layout_margin="2dp"
                             android:id="@+id/txt_state"
+                            android:minWidth="80dp"
                             android:background="@color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
