--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,6 +37,7 @@
 
         <item
             android:id="@+id/nav_statistics"
+            android:visible="false"
             android:title="@string/menu_statistics" />
 
         <item
