--- a/app/src/main/res/layout/fragment_confirm.xml
+++ b/app/src/main/res/layout/fragment_confirm.xml
@@ -35,6 +35,7 @@
                     android:id="@+id/btn_confirm_request"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
                     android:text="@string/app_confirm_request" />
 
             </LinearLayout>
