--- a/app/src/main/res/layout/fragment_end.xml
+++ b/app/src/main/res/layout/fragment_end.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="@dimen/size_item"
+            android:textSize="@dimen/size_item2"
             android:gravity="center"
             android:text="@string/app_requed_end" />
 
@@ -37,6 +37,7 @@
                 android:layout_gravity="bottom"
                 android:orientation="vertical"
                 android:layout_alignParentBottom="true"
+
                 android:gravity="bottom|center" >
 
                 <com.google.android.material.button.MaterialButton
@@ -54,6 +55,7 @@
                     android:id="@+id/btn_request_end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="30dp"
                     android:text="@string/app_end" />
 
             </LinearLayout>
