--- a/app/src/main/res/layout/item_register.xml
+++ b/app/src/main/res/layout/item_register.xml
@@ -2,6 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:minHeight="130dp"
     android:layout_margin="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/black"
+            android:layout_weight="1"
+            android:gravity="center">
+
+
+            <ImageView
+                android:id="@+id/im_dog"
+                android:layout_width="0dp"
+                android:layout_margin="4dp"
+                android:layout_height="150dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:layout_weight="1"
+                android:src="@drawable/ic_add" />
+
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minHeight="130dp"
+    android:layout_margin="10dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -19,6 +57,7 @@
             android:layout_weight="1"
             android:gravity="center">
 
+
             <ImageView
                 android:id="@+id/im_dog"
                 android:layout_width="0dp"
@@ -32,7 +71,5 @@
                 android:src="@drawable/ic_add" />
 
         </LinearLayout>
-
     </LinearLayout>
-
-</LinearLayout>
+</LinearLayout> -->
