--- a/app/src/main/res/layout/item_request.xml
+++ b/app/src/main/res/layout/item_request.xml
@@ -23,42 +23,66 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_marginTop="4dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginBottom="4dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginBottom="2dp"
                 android:background="@color/co_melon"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Firulay"
                     android:textStyle="bold"
+                    android:textColor="@color/co_brown"
                     android:textSize="@dimen/size_item"
-                    android:gravity="center"
-                    />
+                    android:gravity="center" />
 
-                <ImageView
-                    android:id="@+id/im_request"
-                    android:layout_width="150dp"
-                    android:layout_marginTop="4dp"
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/black"
+                        android:layout_marginTop="4dp"
+                        android:layout_margin="10dp"
+                        android:gravity="center" >
 
-                    android:layout_marginLeft="4dp"
-                    android:layout_height="150dp"
-                    android:paddingBottom="10dp"
-                    android:adjustViewBounds="true"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_foto" />
+                        <ImageView
+                            android:id="@+id/im_request"
+                            android:layout_width="150dp"
+                            android:layout_margin="3dp"
+                            android:layout_height="150dp"
+                            android:adjustViewBounds="true"
+                            android:layout_gravity="center"
+                            android:scaleType="centerCrop"
+                            android:layout_weight="1"
+                            android:src="@drawable/ic_foto" />
+
+                    </LinearLayout>
+                </RelativeLayout>
+
+                <!-- <ImageView
+                        android:id="@+id/im_request"
+                        android:layout_width="150dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_height="150dp"
+                        android:paddingBottom="10dp"
+                        android:adjustViewBounds="true"
+                        android:layout_gravity="center"
+                        android:scaleType="centerCrop"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_foto" /> -->
+
             </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_margin="4dp"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -86,6 +110,7 @@
                         android:layout_marginLeft="2dp"
                         android:layout_width="wrap_content"
                         android:background="@color/co_ok"
+                        android:padding="2dp"
                         android:layout_height="wrap_content">
 
                         <TextView
@@ -95,8 +120,9 @@
                             android:background="@color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/size_item"
+                            android:textSize="@dimen/size_item2"
                             android:textColor="@color/co_ok"
+                            android:gravity="center"
                             android:text="@string/app_request_ok" />
 
                     </LinearLayout>
