--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,11 +47,12 @@
         android:label="@string/menu_list"
         tools:layout="@layout/fragment_management" />
 
+    <!--
     <fragment
         android:id="@+id/nav_statistics"
         android:name="com.hache.appentrepatas.ui.statistic.StatisticFragment"
         android:label="@string/menu_statistics"
-        tools:layout="@layout/fragment_statistic" />
+        tools:layout="@layout/fragment_statistic" /> -->
 
     <activity
         android:id="@+id/nav_logoff"
