--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -42,6 +42,7 @@
                 android:text="Macho"
                 android:enabled="false"
                 android:textAlignment="center"
+                android:textColor="@color/co_brown"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
@@ -65,6 +66,7 @@
                 android:text="9 kg."
                 android:enabled="false"
                 android:textAlignment="center"
+                android:textColor="@color/co_brown"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
@@ -88,6 +90,7 @@
                 android:text="3 años"
                 android:enabled="false"
                 android:textAlignment="center"
+                android:textColor="@color/co_brown"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
