--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,10 +40,8 @@
                 android:src="@drawable/ic_users"/>
 
             <EditText
-                android:id="@+id/login_userTxt"
+                android:id="@+id/userTxt"
                 android:layout_width="300dp"
-                android:textColor="@color/co_brown"
-                android:maxLength="20"
                 android:hint="@string/user_mail"
                 android:layout_height="wrap_content" />
 
@@ -62,11 +60,8 @@
                 android:src="@drawable/ic_lock"/>
 
             <EditText
-                android:id="@+id/login_passTxt"
                 android:layout_width="300dp"
                 android:password="true"
-                android:maxLength="20"
-                android:textColor="@color/co_brown"
                 android:hint="@string/user_password"
                 android:layout_height="wrap_content" />
 
