--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -29,9 +29,12 @@
                 android:text="@string/title_register" />
 
             <EditText
+                android:id="@+id/nombre_registerTxt"
                 android:layout_marginTop="30dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/co_brown"
+                android:maxLength="20"
                 android:hint="@string/app_adopt_name"  />
 
             <Spinner
@@ -43,15 +46,23 @@
                 />
 
             <EditText
+                android:id="@+id/edad_registerTxt"
                 android:layout_marginTop="10dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/co_brown"
+                android:maxLength="3"
+                android:inputType="number"
                 android:hint="@string/app_adopt_age"  />
 
             <EditText
+                android:id="@+id/peso_registerTxt"
                 android:layout_marginTop="10dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/co_brown"
+                android:inputType="numberDecimal"
+                android:maxLength="5"
                 android:hint="@string/app_adopt_weight"  />
 
             <androidx.recyclerview.widget.RecyclerView
