--- a/app/src/main/res/layout/item_adopt.xml
+++ b/app/src/main/res/layout/item_adopt.xml
@@ -4,7 +4,9 @@
     android:orientation="vertical"
     android:minHeight="130dp"
     android:background="@color/co_brown"
-    android:layout_margin="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -23,10 +25,10 @@
             <ImageView
                 android:id="@+id/im_dog"
                 android:layout_width="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_height="200dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:layout_marginLeft="3dp"
+                android:layout_height="127dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:layout_weight="1"
@@ -34,7 +36,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_margin="8dp"
+                android:layout_margin="3dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="center"
