--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,19 +37,20 @@
 
         <item
             android:id="@+id/nav_statistics"
-            android:title="@string/menu_statistics" />
+            android:title="@string/menu_statistics"
+            android:visible="false"/>
 
         <item
             android:id="@+id/nav_subtitle"
             android:title="" >
             <menu>
-                <item
-                    android:id="@+id/nav_setting"
-                    android:title="@string/menu_settings" />
-
+<!--                <item-->
+<!--                    android:id="@+id/nav_setting"-->
+<!--                    android:title="@string/menu_settings" />-->
                 <item
                     android:id="@+id/nav_logoff"
                     android:title="@string/menu_logoff" />
+
 
             </menu>
         </item>
