--- a/app/src/main/res/layout/item_request.xml
+++ b/app/src/main/res/layout/item_request.xml
@@ -31,6 +31,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/txt_NombrePerro"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Firulay"
@@ -94,6 +95,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:minWidth="180dp"
+                    android:layout_marginTop="35dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -136,6 +138,34 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_endup" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:minWidth="180dp"
+                    android:paddingBottom="0dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginBottom="0dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_NroSolicitud"
+                        android:textSize="@dimen/size_item2"
+                        android:layout_marginTop="35dp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_nroSolicitud"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:textSize="@dimen/size_item2"
+                        android:layout_marginTop="35dp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
             </LinearLayout>
 
