Flujo Terminar Solicitud

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
                 android:hint="@string/user_mail"
                 android:textColor="@color/co_brown"
                 android:maxLength="40"
+                android:inputType="textEmailAddress"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
