--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="co_opaco">#f3f3f3</color>
 
     <color name="co_toolbar">#8190A5</color>
+    <color name="colorAccent">#5eb8ff</color>
 </resources>
